Bug 518890 - Italics don't apply instantly when only part of text is selected
Summary: Italics don't apply instantly when only part of text is selected
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 5.3.1
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-12 19:49 UTC by marc1my2words2
Modified: 2026-04-24 12:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description marc1my2words2 2026-04-12 19:49:39 UTC
If only part of a text object is selected, it takes two Ctrl+I presses to italicize the text, while every other text effect applies instantly upon pressing Ctrl+B (bold) or Ctrl+U (underline), whether the whole text object or a part of it is selected, it applies. This doesn't happen when the whole text object is selected since only a single Ctrl+I is required to italicize it.

STEPS TO REPRODUCE
1. Create new project file
2. Add new text object
3. Select a single word of "Placeholder text" (or more generally click, then click+hold and drag to select a part of it)
4. Press Ctrl+I two times

OBSERVED RESULT
Selected part of text doesn't become italicized right away until Ctrl+I is pressed again in a row.

EXPECTED RESULT
Selected part of text becomes italicized. Pressing Ctrl+I reverts the italicized text back to normal.

SOFTWARE/OS VERSIONS
Windows: 11 25H2 2026-03 Update (KB5086672) (26200.8117)
Qt Version: 5.15.11 (PyQt)

ADDITIONAL INFORMATION
git hash: 9069dbc0a2702d366ebd966ad6ccca812b0ed8d7
Comment 1 wolthera 2026-04-24 12:14:11 UTC
Git commit fe199474e45c34b0276bcd980423e6bf98462aeb by Wolthera van Hövell tot Westerflier.
Committed on 24/04/2026 at 11:45.
Pushed by woltherav into branch 'master'.

Fix toggle italic action.

M  +1    -1    plugins/tools/svgtexttool/SvgTextShortCuts.cpp

https://invent.kde.org/graphics/krita/-/commit/fe199474e45c34b0276bcd980423e6bf98462aeb
Comment 2 wolthera 2026-04-24 12:16:03 UTC
Git commit b7b6f53be78f7a79110e59ec59ce022a580f4dcd by Wolthera van Hövell.
Committed on 24/04/2026 at 12:15.
Pushed by woltherav into branch 'krita/6.0'.

Fix toggle italic action.


(cherry picked from commit fe199474e45c34b0276bcd980423e6bf98462aeb)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>

M  +1    -1    plugins/tools/svgtexttool/SvgTextShortCuts.cpp

https://invent.kde.org/graphics/krita/-/commit/b7b6f53be78f7a79110e59ec59ce022a580f4dcd