Fix toggle italic action.

BUG:518890


(cherry picked from commit fe199474e45c34b0276bcd980423e6bf98462aeb)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>